--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.36MB/s(Youtube:不良林), server: 51.81.223.13, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.55MB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇺🇸 美国-3.31MB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.46MB/s(Youtube:不良林), server: 38.75.136.21, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-3.63MB/s(Youtube:不良林), server: 38.114.114.19, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-4.46MB/s(Youtube:不良林), server: 51.81.223.12, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.84MB/s(Youtube:不良林), server: relay1.wallless.cloud, port: 39021, type: vmess, uuid: 6f686183-b399-4976-a60f-dd2685ef8075, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.95MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-5.22MB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇺🇸 美国-3.53MB/s(Youtube:不良林), server: 20.239.179.251, port: 50044, type: vmess, uuid: a12e496e-f89a-434a-8011-108846f0e412, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.179.251}}
+  - {name: 🇨🇳 中国-15.91MB/s(Youtube:不良林), server: trojan.linkdns.xyz, port: 40208, type: trojan, password: 379105df-ad74-3c8a-ace3-5832de8f973a, sni: trojan.linkdns.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.89MB/s(Youtube:不良林), server: 51.81.223.12, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.96MB/s(Youtube:不良林), server: 51.81.223.36, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.82MB/s(Youtube:不良林), server: 51.81.223.21, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.72MB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
