--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.60MB/s(Youtube:不良林), server: 38.75.136.21, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇷🇺 俄罗斯联邦-158.9KB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
-  - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: 38.68.134.85, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.29MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-2.81MB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇷🇺 俄罗斯联邦-2.68MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
+  - {name: 🇺🇸 美国-4.18MB/s(Youtube:不良林), server: 51.81.223.17, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.64MB/s(Youtube:不良林), server: 38.75.136.21, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-3.46MB/s(Youtube:不良林), server: 38.75.136.21, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-3.42MB/s(Youtube:不良林), server: 38.75.136.102, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-4.89MB/s(Youtube:不良林), server: 51.81.223.12, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.96MB/s(Youtube:不良林), server: 51.81.223.36, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.04MB/s(Youtube:不良林), server: 51.81.223.21, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-158.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-158.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-158.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-158.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-158.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-158.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-158.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
